# sync-cookies

./: .gitignore  Cargo.toml  README.md
sync-cookies/: Cargo.toml
sync-cookies-common/: Cargo.toml
sync-cookies-ebpf/: Cargo.toml
sync-cookies-ebpf/src/: main.rs
sync-cookies/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
